--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./scripts/postinstall.sh"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "@swc/core": "^1.3.99",
     "@types/node": "^20.9.3",
+    "fast-xml-parser": "^4.3.2",
+    "jszip": "^3.10.1",
     "svg-parser": "^2.0.4",
     "svgson": "^5.3.1",
     "xml-js": "^1.6.11"
