--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@swc/core": "^1.3.99",
     "@types/node": "^20.9.3",
     "fast-xml-parser": "^4.3.2",
+    "glob": "^10.3.10",
     "jszip": "^3.10.1",
     "svg-parser": "^2.0.4",
     "svgson": "^5.3.1",
