--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@swc/core": "^1.3.99",
     "@types/node": "^20.9.3",
+    "commander": "^11.1.0",
     "fast-xml-parser": "^4.3.2",
     "glob": "^10.3.10",
     "jszip": "^3.10.1",
