--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "dependencies": {
     "@swc/core": "^1.3.99",
     "@types/node": "^20.9.3",
+    "audioconcat": "^0.1.4",
     "commander": "^11.1.0",
     "fast-xml-parser": "^4.3.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "glob": "^10.3.10",
     "jszip": "^3.10.1",
+    "play-sound": "^1.1.6",
     "svg-parser": "^2.0.4",
     "svg-path-bounds": "^1.0.2",
     "svgson": "^5.3.1",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/ffmpeg": "^1.0.7",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/play-sound": "^1.1.2",
     "@types/svg-parser": "^2.0.6",
     "@types/svg-path-bounds": "^1.0.2"
   }
